@@ -334,6 +334,7 @@ S3method(limits,factor)
 S3method(limits,numeric)
 S3method(limits,POSIXct)
 S3method(limits,POSIXlt)
+S3method(plot,ggplot)
 S3method(predictdf,default)
 S3method(predictdf,glm)
 S3method(predictdf,locfit)
