@@ -1,3 +1,5 @@
+* Added `plot` as an alias for `print` for ggplot objects.
+
 * Visual tests have been moved to /visual_test and modified to work with the
   vtest package. (Thanks to Winston Chang)
 
